# Grading-system

./: .gitignore  CMakeLists.txt  Marks.csv  README.md
include/: Student.h
source/: Grades analysis v2.cpp  Student.cpp
src/: Student.cpp
